- Bloglar sayfalama simgelemelerinin çıkmamasıyla alakalı bir hata düzeltildi. - Yorumun altına kaç günden beri yazının var olduğunu belirten sayaç eklendi. - Bazı resimler optimize edildi.

--- a/css/bicim.css
+++ b/css/bicim.css
@@ -113,11 +113,21 @@ div.bilgi h1.isim {
 
 }
 
-div.bilgi p.tanitim {
+div.bilgi p.yorum {
 
 	font-size: .9em;
     color: #5FCCFF;
     line-height: 18px;
+    margin-bottom: 0;
+
+}
+
+div.bilgi p.yorumZaman {
+
+	font-size: .7em;
+    color: #5FCCFF;
+    float: right;
+    margin: 0;
 
 }
 
