--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Cüneyt TAŞ Kişisel İnternet Sitesi
 Author: Cüneyt TAŞ
 Author URI: http://www.cuneyt-tas.com
-Version: 3.3
+Version: 3.4
 */
 
 html, body {
@@ -62,7 +62,7 @@ a {
 div.ana {
 
 	margin: 0 auto;
-	max-width: 1200px;
+	max-width: 1280px;
 	width: 100%;
 	height: 100%;
 	overflow-x: hidden;
@@ -151,9 +151,19 @@ div.sosyal {
 
 }
 
-div.sosyal p{
+div.sosyal a {
 
-    margin-bottom: 0;
+	text-align: center;
+    font-size: 35px;
+    padding: 0;
+    color: white;
+    transition: 0.3s;
+
+}
+
+div.sosyal a:hover {
+
+	font-size: 45px;
 
 }
 
@@ -163,14 +173,6 @@ div.sosyal span {
 	font-size: 1em;
 	line-height: 1.5em;
 	color: white;
-
-}
-
-div.sosyal a {
-
-	text-align: center;
-	width: 100%;
-    display: block;
 
 }
 
@@ -1119,5 +1121,42 @@ div.sayfalama {
 
 	margin-top: 25px;
 	text-align: center;
+
+}
+
+/* -*--*--*--*--*--*--*--*--*--*
+
+	---  404 Sayfası  ---
+
+*__*__*__*__*__*__*__*__*__*__*/
+
+
+figure.sayfaYok {
+
+	margin: 0;
+    margin-top: 5%;
+	text-align: center;
+
+}
+
+
+figure.sayfaYok img {
+
+	width: 160px;
+	display: inline-block;
+
+}
+
+p.yokUst {
+
+	text-align: center;
+    font-size: 35px !important;
+
+}
+
+p.yokAlt {
+
+	text-align: center;
+    font-size: 20px !important;
 
 }
